css/screen.css
/* ... */
/* line 90, ../sass/_style.sass */
#projects div[data-picture] {
  text-align: center; }
  /* line 92, ../sass/_style.sass */
  #projects div[data-picture] > img {
    width: 100%;
    max-width: 100%;
    position: relative; }
/* line 96, ../sass/_style.sass */
#projects div.project-wrap {
  margin-bottom: 2em;
  background: #a3ff4d;
  -webkit-backface-visibility: hidden; }
  /* line 101, ../sass/_style.sass */
  #projects div.project-wrap:nth-child(even) .project {
    background: #4dffe7; }
  /* line 103, ../sass/_style.sass */
  #projects div.project-wrap:nth-child(odd) .project {
    background: #a3ff4d; }
  /* line 105, ../sass/_style.sass */
  #projects div.project-wrap * {
    -webkit-backface-visibility: hidden; }

/* line 109, ../sass/_style.sass */
.text, .project-data {
  padding: 5px;
  color: #333333; }

/* line 113, ../sass/_style.sass */
.project-data {
  border-top: rgba(157, 157, 157, 0.5) 1px solid; }

/* line 116, ../sass/_style.sass */
header, footer {
  border: none;
  margin: 100px 0; }
  /* line 119, ../sass/_style.sass */
  header > div, footer > div {
    margin: 0 auto;
    max-width: 32em;
    vertical-align: middle; }
    /* line 123, ../sass/_style.sass */
    header > div a[href], footer > div a[href] {
      color: #a3ff4d; }
      /* line 125, ../sass/_style.sass */
      header > div a[href].on, footer > div a[href].on {
        background: #a3ff4d;
        color: #333333;
        -webkit-border-radius: 3px;
        -moz-border-radius: 3px;
        -ms-border-radius: 3px;
        -o-border-radius: 3px;
        border-radius: 3px; }
    /* line 129, ../sass/_style.sass */
    header > div p, footer > div p {
      color: #ececec;
      text-align: justify;
      padding: 0 10px;
      width: 100%; }
  /* line 134, ../sass/_style.sass */
  header h1, footer h1 {
    text-align: center;
    letter-spacing: 0.05em;
    color: #4dffe7;
    text-shadow: rgba(255, 255, 255, 0.7) 1px 1px 0, rgba(0, 0, 0, 0.7) -1px -1px 0;
    margin-bottom: 0.4em; }

/* line 141, ../sass/_style.sass */
footer {
  margin: 20px inherit; }

/* line 144, ../sass/_style.sass */
.social {
  text-align: center; }
  /* line 146, ../sass/_style.sass */
  .social a {
    text-decoration: none; }
  /* line 148, ../sass/_style.sass */
  .social div[data-picture] {
    display: inline-block; }
    /* line 150, ../sass/_style.sass */
    .social div[data-picture] img {
      width: 32px;
      height: 32px; }

/* line 154, ../sass/_style.sass */
#expando-wrapper {
  background: #4dffe7;
  color: #333333; }
  /* line 157, ../sass/_style.sass */
  #expando-wrapper p a[href], #expando-wrapper li a[href] {
    color: black;
    text-decoration: underline;
    -webkit-transition: all 0.2s ease-out;
    -webkit-transition-delay: 0;
    -moz-transition: all 0.2s ease-out 0;
    -o-transition: all 0.2s ease-out 0;
    transition: all 0.2s ease-out 0; }
  /* line 159, ../sass/_style.sass */
  #expando-wrapper > div {
    margin: 10px auto;
    padding: 10px;
    max-width: 32em;
    position: relative; }
    /* line 164, ../sass/_style.sass */
    #expando-wrapper > div.expando-close {
      display: none;
      text-align: center;
      margin-bottom: -1em;
      font-size: 2.8em;
      line-height: 1.07143em; }
      /* line 169, ../sass/_style.sass */
      #expando-wrapper > div.expando-close a:hover {
        background: none;
        -webkit-transition: none;
        -moz-transition: none;
        -o-transition: none;
        transition: none; }
      /* line 172, ../sass/_style.sass */
      #expando-wrapper > div.expando-close i {
        position: relative;
        top: -0.4em; }
    /* line 175, ../sass/_style.sass */
    #expando-wrapper > div ul {
      margin-left: 10px; }
  /* line 177, ../sass/_style.sass */
  #expando-wrapper a[href] i {
    color: #4f4f4f;
    text-decoration: none;
    margin-right: 5px;
    -webkit-transition: none;
    -moz-transition: none;
    -o-transition: none;
    transition: none; }
    /* line 182, ../sass/_style.sass */
    #expando-wrapper a[href] i:hover {
      background: none; }

/* line 186, ../sass/_style.sass */
#skills .set {
  margin-bottom: 10px; }
  /* line 188, ../sass/_style.sass */
  #skills .set:last-child {
    margin-bottom: 0; }

/* line 191, ../sass/_style.sass */
.slide-out {
  display: none; }

/* line 195, ../sass/_style.sass */
.project-data h3 {
  margin-bottom: 0.2em; }
/* line 197, ../sass/_style.sass */
.project-data h4 {
  margin-top: 0.2em; }
/* line 199, ../sass/_style.sass */
.project-data i {
  background: #4f4f4f;
  border-radius: 50%;
  color: #ececec;
  padding: 0.1em 0.1em 0.15em 0.1em; }
/* line 204, ../sass/_style.sass */
.project-data li {
  margin-top: 0.3em;
  text-overflow: ellipsis; }

/* Hiding and displaying elements with media queries */
@media screen and (max-width: 480px) {
  /* line 209, ../sass/_style.sass */
  .hidden-phone {
    display: none !important; } }

@media screen and (min-width: 481px) and (max-width: 1024px) {
  /* line 213, ../sass/_style.sass */
  .hidden-tablet {
    display: none !important; } }

@media screen and (min-width: 1025px) {
  /* line 217, ../sass/_style.sass */
  .hidden-desktop {
    display: none !important; } }

/* Tablets and larger screens */
@media screen and (min-width: 481px) {
  /* line 224, ../sass/_style.sass */
  header p {
    text-align: justify; }

  /* line 227, ../sass/_style.sass */
  .text, .project-data {
    padding: 10px;
    min-width: 15em; }

  /* line 231, ../sass/_style.sass */
  .project-data li {
    -ms-text-overflow: clip;
    text-overflow: clip; } }
/* ... */

